<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_inbox" />
        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/ic_menu_drafts"
            android:title="@string/menu_drafts" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_menu_sent"
            android:title="@string/menu_sent" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_menu_trash"
            android:title="@string/menu_trash" />
    </group>
</menu>