<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mtsan.tusmail.ui.home.HomeFragment"
        android:label="@string/menu_inbox"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_drafts"
        android:name="com.mtsan.tusmail.ui.gallery.GalleryFragment"
        android:label="@string/menu_drafts"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sent"
        android:name="com.mtsan.tusmail.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_sent"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_trash"
        android:name="com.mtsan.tusmail.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_trash"
        tools:layout="@layout/fragment_slideshow" />
</navigation>